--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,6 +60,7 @@ jobs:
           - mongodb.py
           - neo4j.py
           - nginx.py
+          - postgresql
           - rabbitmq.py
           - redis.py
           - selenium.py
