--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,7 +60,7 @@ jobs:
           - mongodb.py
           - neo4j.py
           - nginx.py
-          - postgresql
+          - postgresql.py
           - rabbitmq.py
           - redis.py
           - selenium.py
